# pyOpenTalk

./: LICENSE  README.md  pyproject.toml  requirements.txt  talk.py
potui/: index.html  package.json  pnpm-lock.yaml
potui/src/: App.css  App.tsx  Chat.tsx  ConfigForm.tsx  LocalAPI.js  main.tsx  types.ts
