[tool.poetry]
name = "pyopentalk"
version = "0.1.0"
description = ""
authors = ["devdave <devdave@ominian.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
openai = "^0.27.6"
pycparser = "^2.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
